--- a/src/main/resources/templates/demo/tinhToan.html
+++ b/src/main/resources/templates/demo/tinhToan.html
@@ -5,7 +5,7 @@
     <title>FPT Polytechnic</title>
 </head>
 <body>
-    <form method="post">`
+    <form method="post">
         <label for="chieuDai">Chiều dài</label>
         <input type="number" name="chieuDai" id="chieuDai" th:value="${param.chieuDai}"><br>
         <label for="chieuRong">Chiều rộng</label>
