--- a/src/main/resources/templates/staff-create.html
+++ b/src/main/resources/templates/staff-create.html
@@ -8,52 +8,63 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<style>
-    i {
-        color: red
-    }
-</style>
 <body>
 
-<i th:text="${message}"></i>
-<form action="/staff/create/save" enctype="multipart/form-data"
-      method="post" th:object="${staff}">
-    Email: <input th:field="*{id}">
-    <i th:errors="*{id}"></i>
-    <hr>
+<div class="container mt-5">
+    <div class="alert alert-info" th:text="${message}"></div>
+    <form action="/staff/create/save" class="card p-4 shadow" enctype="multipart/form-data" method="post"
+          th:object="${staff}">
+        <div class="mb-3">
+            <label class="form-label">Email</label>
+            <input class="form-control" th:field="*{id}" type="text">
+            <div class="text-danger" th:errors="*{id}"></div>
+        </div>
 
-    Họ và tên: <input th:field="*{fullname}">
-    <i th:errors="*{fullname}"></i>
-    <hr>
+        <div class="mb-3">
+            <label class="form-label">Họ và tên</label>
+            <input class="form-control" th:field="*{fullname}" type="text">
+            <div class="text-danger" th:errors="*{fullname}"></div>
+        </div>
 
-    Giới tính:
-    <input th:field="*{gender}" type="radio" value="true">Nam
-    <input th:field="*{gender}" type="radio" value="false">Nữ
-    <i th:errors="*{gender}"></i>
-    <hr>
+        <div class="mb-3">
+            <label class="form-label">Giới tính</label>
+            <div>
+                <input class="form-check-input" th:field="*{gender}" type="radio" value="true"> Nam
+                <input class="form-check-input ms-3" th:field="*{gender}" type="radio" value="false"> Nữ
+            </div>
+            <div class="text-danger" th:errors="*{gender}"></div>
+        </div>
 
-    Ngày sinh: <input name="birthday"
-                      th:value="*{#dates.format(birthday, 'MM/dd/yyyy')}">
-    <i th:errors="*{birthday}"></i>
-    <hr>
-    Hình ảnh:
-    <input th:field="*{photo}" type="hidden">
-    <input name="photo_file" type="file">
-    <hr>
+        <div class="mb-3">
+            <label class="form-label">Ngày sinh</label>
+            <input class="form-control" name="birthday" th:value="*{#dates.format(birthday, 'MM/dd/yyyy')}" type="text">
+            <div class="text-danger" th:errors="*{birthday}"></div>
+        </div>
 
-    Cấp bậc:
-    <select th:field="*{level}">
-        <option value="0">Úy</option>
-        <option value="1">Tá</option>
-        <option value="2">Tướng</option>
-    </select>
-    <hr>
+        <div class="mb-3">
+            <label class="form-label">Hình ảnh</label>
+            <input th:field="*{photo}" type="hidden">
+            <input class="form-control" name="photo_file" type="file">
+        </div>
 
-    Salary: <input th:field="*{salary}">
-    <i th:errors="*{salary}"></i>
-    <hr>
-    <button>Create</button>
-</form>
+        <div class="mb-3">
+            <label class="form-label">Cấp bậc</label>
+            <select class="form-select" th:field="*{level}">
+                <option value="0">Úy</option>
+                <option value="1">Tá</option>
+                <option value="2">Tướng</option>
+            </select>
+        </div>
+
+        <div class="mb-3">
+            <label class="form-label">Salary</label>
+            <input class="form-control" th:field="*{salary}" type="text">
+            <div class="text-danger" th:errors="*{salary}"></div>
+        </div>
+
+        <button class="btn btn-primary" type="submit">Create</button>
+    </form>
+</div>
 
 
 </body>
