--- a/src/main/resources/templates/mail/index.html
+++ b/src/main/resources/templates/mail/index.html
@@ -41,6 +41,7 @@
     <div class="text-center">
         <button type="submit" formaction="/mail/send" class="btn btn-primary">Send Now</button>
         <button type="submit" formaction="/mail/queue" class="btn btn-secondary">Queue Email</button>
+        <button type="reset" class="btn btn-warning">Reset</button>
     </div>
 </form>
 </body>
